--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <head>
 	<title>Manny's Portfolio</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="favicon/site.webmanifest">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,9 +52,8 @@
 			<h2>Recent Work</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/Avalon.webp" class="image fit thumb"><img src="images/thumbs/Avalon.webp"
-							alt="" /></a>
-					<a class="button"href="https://avalonarmy.netlify.com/" type="button" name="button"><i class="far fa-hand-point-right"></i> Check it out</a>
+					<a href="images/fulls/Avalon.webp" class="image fit thumb"><img src="images/thumbs/Avalon.webp" alt="" /></a>
+					<a class="button" href="https://avalonarmy.netlify.com/" type="button" name="button"><i class="far fa-hand-point-right"></i> Check it out</a>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -93,12 +96,9 @@
 				<div class="col-8 col-12-small">
 					<form method="post" action="#">
 						<div class="row gtr-uniform gtr-50">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
-									placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email"
-									placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message"
-									rows="4"></textarea></div>
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 						</div>
 					</form>
 					<ul class="actions">
